[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Pixellari.ttf.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/ButtonHowTo.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HUD.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ButtonQuit.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=8]
script/source = "extends Label


"

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="LabelTitle" type="Label" parent="."]
margin_left = 104.0
margin_top = 19.0
margin_right = 214.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "Untitled Fishing
Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="."]
margin_left = 136.0
margin_top = 63.0
margin_right = 184.0
margin_bottom = 85.0
custom_colors/font_color_disabled = Color( 0.0235294, 0.0196078, 0.0196078, 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHowTo" type="Button" parent="."]
margin_left = 131.0
margin_top = 88.0
margin_right = 191.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 3 )
text = "How to"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelScore" type="Label" parent="."]
margin_left = -9.0
margin_top = 2.0
margin_right = 101.0
margin_bottom = 37.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "Score:0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLives" type="Label" parent="."]
margin_left = 276.0
margin_top = 3.0
margin_right = 386.0
margin_bottom = 38.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "Lives:3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelInfo" type="Label" parent="."]
margin_left = 214.0
margin_top = 19.0
margin_right = 293.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 4 )
text = "Press C to 
cast line"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMissed" type="Label" parent="."]
visible = false
margin_left = 32.0
margin_top = 31.0
margin_right = 72.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 5 )
text = "Rock bottom!
-1 life"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGameOver" type="Label" parent="."]
visible = false
margin_left = 102.0
margin_top = 18.0
margin_right = 216.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 6 )
text = "GAME
 OVER!!"
align = 1
script = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="Button" parent="."]
visible = false
margin_left = 141.0
margin_top = 135.0
margin_right = 183.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 7 )
text = "Quiz"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonStart" to="." method="_on_ButtonStart_pressed"]
